Improvements on the structure

--- a/sass/base/_colors.scss
+++ b/sass/base/_colors.scss
@@ -1,5 +1,3 @@
-// Add your colors variables here...
-
-$black: #000;
-$semi-black: #191920;
-$white: #fff;
+/* ----------------------------------------------------------------------------------------------------------------------------------------------------
+    01. Text Colors
+---------------------------------------------------------------------------------------------------------------------------------------------------- */
