--- a/sass/base/_variables.scss
+++ b/sass/base/_variables.scss
@@ -1,6 +1,7 @@
 /* ----------------------------------------------------------------------------------------------------------------------------------------------------
-    01. Directions
+    01. All Colors
 ---------------------------------------------------------------------------------------------------------------------------------------------------- */
-$Dir: ltr;
-$left: left;
-$right: right;
+// Neutral Colors
+$black: #000;
+$white: #fff;
+$gray: #8b9195;
