--- a/sass/base/_variables_rtl.scss
+++ b/sass/base/_variables_rtl.scss
@@ -1,4 +1,6 @@
+/* ----------------------------------------------------------------------------------------------------------------------------------------------------
+    01. Directions
+---------------------------------------------------------------------------------------------------------------------------------------------------- */
 $Dir: rtl;
-
 $left: right;
 $right: left;
